solved margin gap between footer links

--- a/src/App.css
+++ b/src/App.css
@@ -1,16 +1,4 @@
-/* #heading{ */
-    /* margin-left: 17%; */
-    /* border-right: 1px solid black; */
-    /* border-bottom: 1px solid black; */
-    /* display: inline-block; */
-    /* padding-right: 10px; */
-    /* padding-bottom: 10px; */
-    /* height: 50px; */
-    /* margin-top: 4px; */
-/* } */
-/* mainWrapper{
 
-} */
 .flexCenter{
     display: flex;
     height: 100vh;
@@ -39,3 +27,6 @@ footer{
     margin-top: 26px;
 }
 
+a{
+    margin-right: 15px;
+}
